# OrtMT5

./: .gitignore  CMakeLists.txt  OrtMT5.cpp  OrtMT5.h  OrtMTLib.c  OrtMTLib.cc  OrtMTLib.cpp  OrtMTLib.h  README.md  SpLib.cpp  SpLib.h  build-debug.bat  build-win32.bat  build.bat  test_ctypes.py  test_input_token_ids.txt  test_sp.py  utils.cpp  utils.h
